[package]
name = "lightning_encoding"
version = "0.6.0-rc.1"
license = "Apache-2.0"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Network encoding for lightning network peer protocol data types"
repository = "https://github.com/LNP-BP/lnp-core"
homepage = "https://lnp-bp.org"
keywords = ["bitcoin", "lightning", "lnp-bp", "encoding"]
categories = ["cryptography::cryptocurrencies", "network-programming", "parse"]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"

[lib]
name = "lightning_encoding"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = "3.12.0"
strict_encoding = "1.8.0-rc.1"
lightning_encoding_derive = { version = "0.6.0-rc.1", path = "derive", optional = true }
bitcoin = "0.28.0-rc.1"
chrono = "0.4.19"
descriptor-wallet = { version = "0.6.0-beta.1", default-features = false }

[features]
default = ["derive"]
all = ["derive"]
derive = ["lightning_encoding_derive"]

[workspace]
members = [".", "derive"]
default-members = [".", "derive"]
