[package]
name = "lightning_encoding_derive"
version = "0.8.0"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Derive macros for lightning network peer protocol encodings"
repository = "https://github.com/internet2-org/internet2"
homepage = "https://github.com/internet2-org"
keywords = ["lnp-bp", "lightning", "networking", "internet2", "proc-macro"]
categories = ["encoding", "parsing", "network-programming"]
readme = "../README.md"
edition = "2021"
rust-version = "1.56.1"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "1"
proc-macro2 = "1"
amplify_syn = "1.1.6"
encoding_derive_helpers = "0.8.0"

[dev-dependencies]
lightning_encoding = { version = "0.8.0", path = ".." }
amplify_derive = "2.11.2"
